kubernetes_components/Network_Policies/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
spec:
  podSelector:
    matchLabels:
      role: db
  
  policyTypes:
    - Ingress
    - Egress
  
  ingress:
  - from: 
    - podSelector:
        matchLabels:
          name: api-pod
      nameSelector:
        matchLabels:
          name: Prod
    ports:
    - protocol: TCP
      port: 3306
    
  egress:
  - to:
    - ipBlock:
        cidr: 192.68.3.1/32  
    ports:
    - protocol: TCP
      port: 80
